--- a/portfolio.html
+++ b/portfolio.html
@@ -9,91 +9,90 @@
 		href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="./css/style.css">
-	<title>Студия</title>
+	<title>Портфолио</title>
 </head>
 
 <body>
 	<!-- Шапка страницы -->
 	<header>
-		<a href="./index.html"><span>Web</span>Studio</a>
-		<nav>
-			<ul>
-				<li><a href="./index.html">Студия</a></li>
-				<li><a href="">Портфолио</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-			</ul>
-		</nav>
-
+			<a href="./index.html" class="logo"><span>Web</span>Studio</a>
+			<nav>
+				<ul class="header-list padding-list">
+					<li><a class="header-link" href="./index.html">Студия</a></li>
+					<li><a class="header-link" href="#">Портфолио</a></li>
+					<li><a class="header-link" href="#">Контакты</a></li>
+				</ul>
+				<ul class="header-list padding-list">
+					<li><a class="header-link link-color" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a class="header-link link-color" href="tel:+380961111111">+38 096 111 11 11</a></li>
+				</ul>
+			</nav>
 	</header>
 	<!-- Уникальный контент страницы -->
 	<main>
 		<!-- Секция 1 -->
 		<section>
-			<h1>Портфолио</h1>
-			<ul>
-				<li><button type="button">Все</button></li>
-				<li><button type="button">Веб-сайты</button></li>
-				<li><button type="button">Приложения</button></li>
-				<li><button type="button">Дизайн</button></li>
-				<li><button type="button">Маркетинг</button></li>
+			<h1 class="section-title title-hide">Портфолио</h1>
+			<ul class="padding-list">
+				<li><button class="button" type="button">Все</button></li>
+				<li><button class="button" type="button">Веб-сайты</button></li>
+				<li><button class="button" type="button">Приложения</button></li>
+				<li><button class="button" type="button">Дизайн</button></li>
+				<li><button class="button" type="button">Маркетинг</button></li>
 			</ul>
-			<ul>
-				<li><a href="">
+			<ul class="padding-list">
+				<li><a class="porfolio-link" href="">
 					<img src="./images/img_1.jpeg" alt="ноутбук" width="370">
-					<h2>Technoduck</h2>
-					<p>Web-site</p>
+					<h2 class="portfolio-subtitle">Технокряк</h2>
+					<p class="portfolio-text">Веб-сайт</p>
 					</a>
 				</li>
-				<li><a href="">
+				<li><a class="porfolio-link" href="">
 						<img src="./images/img_2.jpeg" alt="баскетболисты играют" width="370">
-						<h2>Poster New Orlean vs Golden Star</h2>
-						<p>Design</p>
+						<h2 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
+						<p class="portfolio-text">Дизайн</p>
 					</a>
 				</li>
-				<li><a href="">
+				<li><a class="porfolio-link" href="">
 						<img src="./images/img_3.jpeg" alt="логотип ресторана" width="370">
-						<h2>Seafood Restaurant</h2>
-						<p>Apps</p>
+						<h2 class="portfolio-subtitle">Ресторан Seafood</h2>
+						<p class="portfolio-text">Приложение</p>
 					</a>
 				</li>
 				<li><a href="">
 						<img src="./images/img_4.jpeg" alt="наушники" width="370">
-						<h2>Project Prime</h2>
-						<p>Marketing</p>
+						<h2 class="portfolio-subtitle">Проект Prime</h2>
+						<p  class="portfolio-text">Маркетинг</p>
 					</a>
 				</li>
 				<li><a href="">
 						<img src="./images/img_5.jpeg" alt="коробочки" width="370">
-						<h2>Project Boxes</h2>
-						<p>Apps</p>
+						<h2 class="portfolio-subtitle">Проект Boxes</h2>
+						<p class="portfolio-text">Приложение</p>
 					</a>
 				</li>
 				<li><a href="">
 						<img src="./images/img_6.jpeg" alt="компьютер" width="370">
-						<h2>Inspiration has no Borders</h2>
-						<p>Web-site</p>
+						<h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
+						<p class="portfolio-text">Веб-сайт</p>
 					</a>
 				</li>
 				<li><a href="">
 						<img src="./images/img_7.jpeg" alt="журнал" width="370">
-						<h2>Limited Edition</h2>
-						<p>Design</p>
+						<h2 class="portfolio-subtitle">Издание Limited Edition</h2>
+						<p class="portfolio-text">Дизайн</p>
 					</a>
 				</li>
 				<li><a href="">
 						<img src="./images/img_8.jpeg" alt="лейба" width="370">
-						<h2>Project LAB</h2>
-						<p>Marketing</p>
+						<h2 class="portfolio-subtitle">Проект LAB</h2>
+						<p class="portfolio-text">Маркетинг</p>
 					</a>
 				</li>
 				<li><a href="">
 						<img src="./images/img_9.jpeg" alt="ноутбук с картинкой" width="370">
-						<h2>Growing Business</h2>
-						<p>Apps</p>
+						<h2 class="portfolio-subtitle">Growing Business</h2>
+						<p class="portfolio-text">Приложение</p>
 					</a>
 				</li>
 			</ul>
@@ -102,13 +101,12 @@
 	</main>
 
 	<!-- Подвал страницы -->
-
-	<footer>
-		<a href="#"><span>Web</span>Studio</a>
+	<footer class="footer">
+		<a class="logo footer-logo" href="./index.html"><span>Web</span>Studio</a>
 		<address>
-			<p>г. Киев, пр-т Леси Украинки, 26</p>
-			<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-			<a href="tel:+380961111111">+38 096 111 11 11</a>
+			<p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+			<a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+			<a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
 		</address>
 	</footer>
 
