--- a/portfolio.html
+++ b/portfolio.html
@@ -59,37 +59,37 @@
 						<p class="portfolio-text">Приложение</p>
 					</a>
 				</li>
-				<li><a href="">
+				<li><a class="porfolio-link" href="">
 						<img src="./images/img_4.jpeg" alt="наушники" width="370">
 						<h2 class="portfolio-subtitle">Проект Prime</h2>
 						<p  class="portfolio-text">Маркетинг</p>
 					</a>
 				</li>
-				<li><a href="">
+				<li><a class="porfolio-link" href="">
 						<img src="./images/img_5.jpeg" alt="коробочки" width="370">
 						<h2 class="portfolio-subtitle">Проект Boxes</h2>
 						<p class="portfolio-text">Приложение</p>
 					</a>
 				</li>
-				<li><a href="">
+				<li><a class="porfolio-link" href="">
 						<img src="./images/img_6.jpeg" alt="компьютер" width="370">
 						<h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
 						<p class="portfolio-text">Веб-сайт</p>
 					</a>
 				</li>
-				<li><a href="">
+				<li><a class="porfolio-link" href="">
 						<img src="./images/img_7.jpeg" alt="журнал" width="370">
 						<h2 class="portfolio-subtitle">Издание Limited Edition</h2>
 						<p class="portfolio-text">Дизайн</p>
 					</a>
 				</li>
-				<li><a href="">
+				<li><a class="porfolio-link" href="">
 						<img src="./images/img_8.jpeg" alt="лейба" width="370">
 						<h2 class="portfolio-subtitle">Проект LAB</h2>
 						<p class="portfolio-text">Маркетинг</p>
 					</a>
 				</li>
-				<li><a href="">
+				<li><a class="porfolio-link" href="">
 						<img src="./images/img_9.jpeg" alt="ноутбук с картинкой" width="370">
 						<h2 class="portfolio-subtitle">Growing Business</h2>
 						<p class="portfolio-text">Приложение</p>
