--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<a href="./index.html" class="logo"><span>Web</span>Studio</a>
 		<nav>
 			<ul class="header-list padding-list">
-				<li><a class="header-link" href="#">Студия</a></li>
+				<li><a class="header-link active-link" href="#">Студия</a></li>
 				<li><a class="header-link"href="./portfolio.html">Портфолио</a></li>
 				<li><a class="header-link"href="#">Контакты</a></li>
 			</ul>
