--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 			<nav>
 				<ul class="header-list padding-list">
 					<li><a class="header-link" href="./index.html">Студия</a></li>
-					<li><a class="header-link" href="#">Портфолио</a></li>
+					<li><a class="header-link active-link" href="#">Портфолио</a></li>
 					<li><a class="header-link" href="#">Контакты</a></li>
 				</ul>
 				<ul class="header-list padding-list">
