--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
 	<!-- Шапка страницы -->
 	<header>
-		<a href="./index.html" class="logo"><span>Web</span>Studio</a>
+		<a href="../index.html" class="logo"><span>Web</span>Studio</a>
 		<nav>
 			<ul class="header-list padding-list">
 				<li><a class="header-link active-link" href="#">Студия</a></li>
-				<li><a class="header-link"href="./portfolio.html">Портфолио</a></li>
+				<li><a class="header-link"href="../portfolio.html">Портфолио</a></li>
 				<li><a class="header-link"href="#">Контакты</a></li>
 			</ul>
 				<ul class="header-list padding-list">
@@ -109,7 +109,7 @@
 
 	<!-- Подвал страницы -->
 	<footer class="footer">
-			<a class="logo footer-logo" href="./index.html"><span>Web</span>Studio</a>
+			<a class="logo footer-logo" href="../index.html"><span>Web</span>Studio</a>
 			<address>
 				<p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
 				<a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
