--- a/portfolio.html
+++ b/portfolio.html
@@ -8,17 +8,17 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 	<title>Портфолио</title>
 </head>
 
 <body>
 	<!-- Шапка страницы -->
 	<header>
-			<a href="../index.html" class="logo"><span>Web</span>Studio</a>
+			<a href="./index.html" class="logo"><span>Web</span>Studio</a>
 			<nav>
 				<ul class="header-list padding-list">
-					<li><a class="header-link" href="../index.html">Студия</a></li>
+					<li><a class="header-link" href="./index.html">Студия</a></li>
 					<li><a class="header-link active-link" href="#">Портфолио</a></li>
 					<li><a class="header-link" href="#">Контакты</a></li>
 				</ul>
@@ -102,7 +102,7 @@
 
 	<!-- Подвал страницы -->
 	<footer class="footer">
-		<a class="logo footer-logo" href="../index.html"><span>Web</span>Studio</a>
+		<a class="logo footer-logo" href="./index.html"><span>Web</span>Studio</a>
 		<address>
 			<p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
 			<a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
