--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<!-- Шапка страницы -->
 	<header>
-		<a href="../index.html" class="logo"><span>Web</span>Studio</a>
+		<a href="./index.html" class="logo"><span>Web</span>Studio</a>
 		<nav>
 			<ul class="header-list padding-list">
 				<li><a class="header-link active-link" href="#">Студия</a></li>
@@ -109,7 +109,7 @@
 
 	<!-- Подвал страницы -->
 	<footer class="footer">
-			<a class="logo footer-logo" href="../index.html"><span>Web</span>Studio</a>
+			<a class="logo footer-logo" href="./index.html"><span>Web</span>Studio</a>
 			<address>
 				<p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
 				<a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
