--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<nav>
 			<ul class="header-list padding-list">
 				<li><a class="header-link active-link" href="#">Студия</a></li>
-				<li><a class="header-link"href="../portfolio.html">Портфолио</a></li>
+				<li><a class="header-link"href="./portfolio.html">Портфолио</a></li>
 				<li><a class="header-link"href="#">Контакты</a></li>
 			</ul>
 				<ul class="header-list padding-list">
