--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
 <body>
 	<!-- Шапка страницы -->
 	<header>
-		<a href="./index.html" class="logo"><span>Web</span>Studio</a>
+		<a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
 		<nav>
 			<ul class="header-list padding-list">
 				<li><a class="header-link active-link" href="#">Студия</a></li>
 				<li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
 				<li><a class="header-link" href="#">Контакты</a></li>
 			</ul>
+		</nav>
 				<ul class="header-list padding-list">
 					<li><a class="header-link link-color" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 					<li><a class="header-link link-color" href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
-		</nav>
+		
 	
 	</header>
 
@@ -78,28 +79,28 @@
 					<div>
 						<img src="./images/img.jpg" width="270" alt="фото Игорь Демьяненко">
 						<h3 class="team-title">Игорь Демьяненко</h3>
-						<p class="team-text">Product Designer</p>
+						<p class="team-text" lang="en">Product Designer</p>
 					</div>
 				</li>
 				<li>
 					<div>
 						<img src="./images/img2.jpg" width="270" alt="фото Ольга Репина">
 						<h3 class="team-title">Ольга Репина</h3>
-						<p class="team-text">Frontend Developer</p>
+						<p class="team-text" lang="en">Frontend Developer</p>
 					</div>
 				</li>
 				<li>
 					<div>
 						<img src="./images/img3.jpg" width="270" alt="фото Николай Тарасов">
 						<h3 class="team-title">Николай Тарасов</h3>
-						<p class="team-text">Marketing</p>
+						<p class="team-text" lang="en">Marketing</p>
 					</div>
 				</li>
 				<li>
 					<div>
 						<img src="./images/img4.jpg" width="270" alt="фото Михаил Ермаков">
 						<h3 class="team-title">Михаил Ермаков</h3>
-						<p class="team-text">UI Designer</p>
+						<p class="team-text" lang="en">UI Designer</p>
 					</div>
 				</li>
 				
@@ -109,12 +110,12 @@
 
 	<!-- Подвал страницы -->
 	<footer class="footer">
-			<a class="logo footer-logo" href="./index.html"><span>Web</span>Studio</a>
-			<address>
-				<p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+			<a class="logo footer-logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
+			<p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+			<ul>
 				<a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				<a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
-			</address>
+			</ul>
 	</footer>
 
 </body>
