--- a/portfolio.html
+++ b/portfolio.html
@@ -15,18 +15,19 @@
 <body>
 	<!-- Шапка страницы -->
 	<header>
-			<a href="./index.html" class="logo"><span>Web</span>Studio</a>
+			<a href="./index.html" class="logo" lang="en"><span>Web</span>Studio</a>
 			<nav>
 				<ul class="header-list padding-list">
 					<li><a class="header-link" href="./index.html">Студия</a></li>
 					<li><a class="header-link active-link" href="#">Портфолио</a></li>
 					<li><a class="header-link" href="#">Контакты</a></li>
 				</ul>
+			</nav>
 				<ul class="header-list padding-list">
 					<li><a class="header-link link-color" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 					<li><a class="header-link link-color" href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
-			</nav>
+			
 	</header>
 	<!-- Уникальный контент страницы -->
 	<main>
@@ -73,7 +74,7 @@
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_6.jpeg" alt="компьютер" width="370">
-						<h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
+						<h2 class="portfolio-subtitle" lang="en">Inspiration has no Borders</h2>
 						<p class="portfolio-text">Веб-сайт</p>
 					</a>
 				</li>
@@ -91,7 +92,7 @@
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_9.jpeg" alt="ноутбук с картинкой" width="370">
-						<h2 class="portfolio-subtitle">Growing Business</h2>
+						<h2 class="portfolio-subtitle" lang="en">Growing Business</h2>
 						<p class="portfolio-text">Приложение</p>
 					</a>
 				</li>
@@ -102,12 +103,13 @@
 
 	<!-- Подвал страницы -->
 	<footer class="footer">
-		<a class="logo footer-logo" href="./index.html"><span>Web</span>Studio</a>
-		<address>
+		<a class="logo footer-logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
 			<p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
-			<a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-			<a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
-		</address>
+			<ul>
+				<a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+			</ul>
+	
 	</footer>
 
 </body>
