--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<!-- Секция 1 -->
 	<section class="section-one">
 		<h1 class="main-title">Эффективные решения<br> для вашего бизнеса</h1>
-		<button class="button" type="button">Заказать услугу</button>
+		<button class="button button-active" type="button">Заказать услугу</button>
 	</section>
 	<!-- Секция 2 -->
 	<section>
@@ -111,10 +111,10 @@
 	<!-- Подвал страницы -->
 	<footer class="footer">
 			<a class="logo footer-logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
-			<p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
-			<ul>
-				<a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+			<ul class="padding-list">
+				<li><p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p></li>
+				<li><a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li><a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
 	</footer>
 
