--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,7 @@
 				<li><button class="button" type="button">Дизайн</button></li>
 				<li><button class="button" type="button">Маркетинг</button></li>
 			</ul>
+			<!-- Дела по роликам Репеты - карточки польностью в ссылке -->
 			<ul class="padding-list">
 				<li><a class="porfolio-link" href="">
 					<img src="./images/img_1.jpeg" alt="ноутбук" width="370">
@@ -50,25 +51,25 @@
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_2.jpeg" alt="баскетболисты играют" width="370">
-						<h2 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
+						<h2 class="portfolio-subtitle" lang="en">Постер New Orlean vs Golden Star</h2>
 						<p class="portfolio-text">Дизайн</p>
 					</a>
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_3.jpeg" alt="логотип ресторана" width="370">
-						<h2 class="portfolio-subtitle">Ресторан Seafood</h2>
+						<h2 class="portfolio-subtitle" lang="en">Ресторан Seafood</h2>
 						<p class="portfolio-text">Приложение</p>
 					</a>
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_4.jpeg" alt="наушники" width="370">
-						<h2 class="portfolio-subtitle">Проект Prime</h2>
+						<h2 class="portfolio-subtitle" lang="en">Проект Prime</h2>
 						<p  class="portfolio-text">Маркетинг</p>
 					</a>
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_5.jpeg" alt="коробочки" width="370">
-						<h2 class="portfolio-subtitle">Проект Boxes</h2>
+						<h2 class="portfolio-subtitle" lang="en">Проект Boxes</h2>
 						<p class="portfolio-text">Приложение</p>
 					</a>
 				</li>
@@ -80,13 +81,13 @@
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_7.jpeg" alt="журнал" width="370">
-						<h2 class="portfolio-subtitle">Издание Limited Edition</h2>
+						<h2 class="portfolio-subtitle" lang="en">Издание Limited Edition</h2>
 						<p class="portfolio-text">Дизайн</p>
 					</a>
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_8.jpeg" alt="лейба" width="370">
-						<h2 class="portfolio-subtitle">Проект LAB</h2>
+						<h2 class="portfolio-subtitle" lang="en">Проект LAB</h2>
 						<p class="portfolio-text">Маркетинг</p>
 					</a>
 				</li>
@@ -104,12 +105,11 @@
 	<!-- Подвал страницы -->
 	<footer class="footer">
 		<a class="logo footer-logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
-			<p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
-			<ul>
-				<a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+			<ul class="padding-list">
+				<li><p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p></li>
+				<li><a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li><a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
-	
 	</footer>
 
 </body>
