--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<!-- Уникальный контент страницы -->
 	<main>
 	<!-- Секция 1 -->
-	<section class="section-one">
+	<section class="section-one"> 
 		<h1 class="main-title">Эффективные решения<br> для вашего бизнеса</h1>
 		<button class="button button-active" type="button">Заказать услугу</button>
 	</section>
@@ -112,7 +112,7 @@
 	<footer class="footer">
 			<a class="logo footer-logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
 			<ul class="padding-list">
-				<li><p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p></li>
+				<li><address class="footer-text">г. Киев, пр-т Леси Украинки, 26</address></li>
 				<li><a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 				<li><a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
