--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 <body>
 	<!-- Шапка страницы -->
 	<header>
-		<a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+		<a href="./index.html" lang="en" class="logo"><span class="logo-color">Web</span>Studio</a>
 		<nav>
-			<ul class="header-list padding-list">
+			<ul class="header-list">
 				<li><a class="header-link active-link" href="#">Студия</a></li>
 				<li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
 				<li><a class="header-link" href="#">Контакты</a></li>
 			</ul>
 		</nav>
-				<ul class="header-list padding-list">
+				<ul class="header-list">
 					<li><a class="header-link link-color" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 					<li><a class="header-link link-color" href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
@@ -43,7 +43,7 @@
 	<!-- Секция 2 -->
 	<section>
 		<h2 class="section-title title-hide">Информационный список</h2>
-		 <ul class="section-list padding-list">
+		 <ul class="section-list">
 			<li>
 				<h3 class="section-subtitle">Внимание к деталям</h3>
 				<p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -65,16 +65,16 @@
 	<!-- Секция 3 -->
 	<section>
 		<h2  class="section-title">Чем мы занимаемся</h2>
-		<ul class="padding-list">
+		<ul>
 			<li><img src="./images/box1.jpg" width="370" alt="картинка с планшетом"></li>
 			<li><img src="./images/box2.jpg" width="370" alt="картинка с ноутбуком и телефоном"></li>
 			<li><img src="./images/box3.jpg" width="370" alt="картинка с изображением на планшете"></li>
 		</ul>
 	</section>
 	<!-- Секция 4 -->
-	<section>
+	<section class="section-foure">
 			<h2 class="section-title">Наша команда</h2>
-			<ul class="padding-list">
+			<ul>
 				<li>
 					<div>
 						<img src="./images/img.jpg" width="270" alt="фото Игорь Демьяненко">
@@ -110,12 +110,14 @@
 
 	<!-- Подвал страницы -->
 	<footer class="footer">
-			<a class="logo footer-logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
-			<ul class="padding-list">
-				<li><address class="footer-text">г. Киев, пр-т Леси Украинки, 26</address></li>
-				<li><a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-			</ul>
+			<a class="logo footer-logo" href="./index.html" lang="en"><span class="logo-color">Web</span>Studio</a>
+				<address>
+					<ul>
+						<li><p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p></li>
+						<li><a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+						<li><a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+					</ul>
+				</address>
 	</footer>
 
 </body>
