--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <body>
 	<!-- Шапка страницы -->
 	<header>
-			<a href="./index.html" class="logo" lang="en"><span>Web</span>Studio</a>
+			<a href="./index.html" class="logo" lang="en"><span class="logo-color">Web</span>Studio</a>
 			<nav>
 				<ul class="header-list padding-list">
 					<li><a class="header-link" href="./index.html">Студия</a></li>
@@ -35,7 +35,7 @@
 		<section>
 			<h1 class="section-title title-hide">Портфолио</h1>
 			<ul class="padding-list">
-				<li><button class="button" type="button">Все</button></li>
+				<li><button class="button button-active" type="button">Все</button></li>
 				<li><button class="button" type="button">Веб-сайты</button></li>
 				<li><button class="button" type="button">Приложения</button></li>
 				<li><button class="button" type="button">Дизайн</button></li>
@@ -51,25 +51,25 @@
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_2.jpeg" alt="баскетболисты играют" width="370">
-						<h2 class="portfolio-subtitle" lang="en">Постер New Orlean vs Golden Star</h2>
+						<h2 class="portfolio-subtitle">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
 						<p class="portfolio-text">Дизайн</p>
 					</a>
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_3.jpeg" alt="логотип ресторана" width="370">
-						<h2 class="portfolio-subtitle" lang="en">Ресторан Seafood</h2>
+						<h2 class="portfolio-subtitle">Ресторан <span lang="en">Seafood</span></h2>
 						<p class="portfolio-text">Приложение</p>
 					</a>
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_4.jpeg" alt="наушники" width="370">
-						<h2 class="portfolio-subtitle" lang="en">Проект Prime</h2>
+						<h2 class="portfolio-subtitle">Проект <sapn lang="en">Prime</sapn></h2>
 						<p  class="portfolio-text">Маркетинг</p>
 					</a>
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_5.jpeg" alt="коробочки" width="370">
-						<h2 class="portfolio-subtitle" lang="en">Проект Boxes</h2>
+						<h2 class="portfolio-subtitle">Проект <span lang="en">Boxes</span></h2>
 						<p class="portfolio-text">Приложение</p>
 					</a>
 				</li>
@@ -81,13 +81,13 @@
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_7.jpeg" alt="журнал" width="370">
-						<h2 class="portfolio-subtitle" lang="en">Издание Limited Edition</h2>
+						<h2 class="portfolio-subtitle">Издание <span lang="en">Limited Edition</span></h2>
 						<p class="portfolio-text">Дизайн</p>
 					</a>
 				</li>
 				<li><a class="porfolio-link" href="">
 						<img src="./images/img_8.jpeg" alt="лейба" width="370">
-						<h2 class="portfolio-subtitle" lang="en">Проект LAB</h2>
+						<h2 class="portfolio-subtitle" lang="en">Проект <span>LAB</span></h2>
 						<p class="portfolio-text">Маркетинг</p>
 					</a>
 				</li>
@@ -104,12 +104,14 @@
 
 	<!-- Подвал страницы -->
 	<footer class="footer">
-		<a class="logo footer-logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
+		<a class="logo footer-logo" href="./index.html" lang="en"><span class="logo-color">Web</span>Studio</a>
+		<address>
 			<ul class="padding-list">
 				<li><p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p></li>
 				<li><a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 				<li><a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
+		</address>
 	</footer>
 
 </body>
