--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
     <main>
       <!-- Секция 1 -->
       <section class="section-one">
-        <h1 class="main-title">
-          Эффективные решения<br />
-          для вашего бизнеса
-        </h1>
+        <h1 class="main-title">Эффективные решения<br />для вашего бизнеса</h1>
         <button class="button button-active" type="button">Заказать услугу</button>
       </section>
       <!-- Секция 2 -->
